# trading_feature

./: .env.example  .env.new  .env.test  .gitignore  ALPHA_VANTAGE_SETUP.md  BACKEND_CONNECTION_FIXED.md  BUY_PREDICTION_FIX_REPORT.md  CHART_ERROR_FIXES.md  CHART_FIXES_SUMMARY.md  CLAUDE.md  CLEANUP_COMPLETE.md  COMPLETE_BUG_INVESTIGATION_REPORT.md  COMPLETE_FLOW_VERIFICATION.md  COMPLETE_MICROSERVICES_IMPLEMENTATION_GUIDE.md  COMPLETE_MULTI_REGION_IMPLEMENTATION_GUIDE.md  COMPREHENSIVE_ANALYSIS_REPORT.md  COMPREHENSIVE_DATA_ANALYSIS.md  COMPREHENSIVE_INTEGRATION_TESTING_COMPLETE.md  COMPREHENSIVE_REMOTE_SYSTEM_ANALYSIS.md  COMPREHENSIVE_TODO_LIST.md  COPILOT_MICROSERVICES_IMPLEMENTATION_GUIDE.md  COPY_PASTE_RECOVERY_COMMANDS.txt  CORRECTED_REMOTE_STATUS.md  CRON_RESTART_GUIDE.md  DASHBOARD_FIXES_SUMMARY.md  DASHBOARD_GUIDE_LAYMENS_TERMS.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  DASHBOARD_OPTIMIZATION_SUMMARY.md  DATABASE_CONSTRAINT_FIX_SUMMARY.md  DATA_RELIABILITY_SUCCESS.md  DATA_VALIDATION_SYSTEM.md  DEBUGGING_GUIDE.md  DEEP_ANALYSIS_COMPLETE_SUMMARY.md  DEEP_SYSTEM_ANALYSIS_REPORT.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DROPLET_RESTART_RECOVERY.md  ENHANCED_CONFIG_INTEGRATION_SUMMARY.md  ENHANCED_DASHBOARD_SUMMARY.md  ENHANCED_INTEGRATION_COMPLETE.md  (+741 more)
.github/: copilot-instructions.md  major-proposal-context.md
analysis_logs/: analysis_summary_20250817_130842.md  analysis_summary_20250817_131520.md  comprehensive_report_20250817_130842.json  comprehensive_report_20250817_131520.json
app/: main.py  main_clean.py  main_enhanced.py
command_logs/: COMMAND_TESTING_SUMMARY.md  ISSUES_FIXED_SUMMARY.md  error_warning_analysis.txt
config/: deployment.yaml  ig_markets_config.json  monitoring.json
data_quality_system/: BUY_INVESTIGATION_CRITICAL_FINDINGS.md  BUY_POSITIONS_DETAILED_ANALYSIS.md  CORRECTED_PIPELINE_DESIGN.md  HOLD_ANALYSIS_REPORT.md  IMPLEMENTATION_GUIDE.md  README.md  data_quality_manager.py  requirements.txt  run_hold_analysis.py
data_temp/: sentiment_history.json
data_v2/: sentiment_history.json
data_v3/: active_trades.json  app_main_integration_results_20250726_130720.json  enhanced_ml_test.db  enhanced_ml_test_results_20250726_130253.json  enhanced_ml_test_results_20250726_130322.json  enhanced_ml_test_results_20250726_130403.json  enhanced_ml_test_results_20250726_130426.json  enhanced_ml_test_results_20250726_130459.json  enhanced_ml_test_results_20250726_130526.json  enhanced_ml_test_results_20250726_130551.json  enhanced_ml_test_results_20250726_130624.json  multi_bank_analysis.db  sentiment_history.json  test_results_20250726_133028.json  test_results_20250726_203127.json  test_results_20250726_203629.json  test_validation.db  trading_data.db
docs/: AI_ENHANCEMENT_COMPLETE.md  ALPACA_INTEGRATION_GUIDE.md  ARCHITECTURE.md  CLEANUP_AND_STABILIZATION_SUMMARY.md  CLEANUP_COMPLETE.md  CURRENT_STATE_ANALYSIS.md  CURRENT_STATE_ANALYSIS_v1.md  DAILY_OPERATIONS_GUIDE.md  DASHBOARD_CONSOLIDATION_GUIDE.md  DASHBOARD_ENHANCEMENTS_SUMMARY.md  DATABASE_CLEANUP_COMPLETE.md  FEATURES.md  FILE_ORGANIZATION.md  IMPLEMENTATION_SUMMARY.md  MEMORY_OPTIMIZATION_IMPLEMENTATION.md  ML_TRADING_SYSTEM_GUIDE.md  MOOMOO_INTEGRATION_GUIDE.md  ORGANIZATION_COMPLETE.md  QUICK_START.md  README.md  RESTRUCTURE_COMPLETE.md  RESTRUCTURE_PLAN.md  TESTING_COMPLETE_SUMMARY.md  TEST_STATUS_REPORT.md  (+1 more)
services/: README.md  (+9 more)
(+788 files in other folders)
