[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-analysis"
version = "2.0.0"
description = "A comprehensive trading analysis platform with ML-powered sentiment analysis"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Trading Analysis Team", email = "contact@tradinganalysis.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["trading", "finance", "sentiment-analysis", "machine-learning", "risk-management"]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "streamlit>=1.25.0",
    "plotly>=5.0.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "feedparser>=6.0.0",
    "python-dotenv>=0.19.0",
    "pyyaml>=6.0",
    "transformers>=4.20.0",
    "torch>=1.12.0",
    "yfinance>=0.1.70",
    "sqlalchemy>=1.4.0",
    "schedule>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]
deploy = [
    "gunicorn>=20.1.0",
    "docker>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/your-username/trading-analysis"
"Bug Reports" = "https://github.com/your-username/trading-analysis/issues"
"Source" = "https://github.com/your-username/trading-analysis"

[project.scripts]
trading-analysis = "app.main:main"
trading-dashboard = "app.dashboard.main:run_dashboard"
trading-manager = "app.services.daily_manager:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
